--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ name: Hector Dominguez
 email: hdomi012@uottawa.ca
 #canonical_url: https://edwinexemplar.com
 keywords: "Software Engineer, Python, Django, Machine Learning, Data Mining, Deep Learning"
-skills: "Software Engineer in Ottawa, ON. Canada"
+skills: "Software Engineer in Ottawa, ON, Canada"
 baseurl:
 
 # Social networks usernames (many more available: google-plus, flickr, dribbble, pinterest, instagram, tumblr, linkedin, etc.)
